Fixed the centering error on Safari

--- a/web/app/themes/thememorypalace2020/resources/assets/styles/common/_global.scss
+++ b/web/app/themes/thememorypalace2020/resources/assets/styles/common/_global.scss
@@ -18,7 +18,7 @@ body{
 .page .content-wrap{
     display: flex;
     justify-content: center;
-    align-items: center;
+    //align-items: center;
 }
 
 h1{
