--- a/web/app/themes/thememorypalace2020/resources/assets/styles/layouts/_header.scss
+++ b/web/app/themes/thememorypalace2020/resources/assets/styles/layouts/_header.scss
@@ -45,7 +45,7 @@
     font-size: .9em;
 
     @include media-breakpoint-up(md){
-      font-size: 1em;
+      font-size: .9em;
     }
   }
 
